@@ -1,3 +1,3 @@
 dependencies {
-    api project(':org.jminor.swing.framework.ui')
+    implementation project(':org.jminor.swing.common.ui')
 }
