@@ -708,6 +708,24 @@ public class EntityTablePanel extends FilteredTablePanel<Entity, Property> {
   }
 
   /**
+   * Creates a Control for viewing an image based on the entity selected in this EntityTablePanel.
+   * The action shows an image found at the path specified by the value of the given propertyId.
+   * If no entity is selected or the image path value is null no action is performed.
+   * Note that for the image to be displayed {@link #viewImage} must be implemented.
+   * @param imagePathPropertyId the ID of the property specifying the image path
+   * @return a Control for viewing an image based on the selected entity in a EntityTablePanel
+   */
+  public final Control getViewImageControl(final String imagePathPropertyId) {
+    Objects.requireNonNull(imagePathPropertyId, "imagePathPropertyId");
+    return Controls.control(new Control.Command() {
+      @Override
+      public void perform() throws Exception {
+        viewImageForSelected(imagePathPropertyId);
+      }
+    }, "View image", getTableModel().getSelectionModel().getSingleSelectionObserver());
+  }
+
+  /**
    * @param listener a listener notified each time the condition panel visibility changes
    */
   public final void addConditionPanelVisibleListener(final EventListener listener) {
@@ -1230,6 +1248,15 @@ public class EntityTablePanel extends FilteredTablePanel<Entity, Property> {
   }
 
   /**
+   * Displays the given image
+   * @param imagePath the path to the image
+   * @throws IOException in case the image is not found
+   */
+  protected void viewImage(final String imagePath) throws IOException {
+    throw new UnsupportedOperationException("viewImage must be overridden");
+  }
+
+  /**
    * Initialize the MouseListener for the table component handling
    * double click and right click, or popup click with ALT down. Double clicking
    * simply invokes the action returned by {@link #getTableDoubleClickAction()}
@@ -1276,6 +1303,18 @@ public class EntityTablePanel extends FilteredTablePanel<Entity, Property> {
     }
 
     return null;
+  }
+
+  private void viewImageForSelected(final String imagePathPropertyId) {
+    try {
+      final Entity selected = getTableModel().getSelectionModel().getSelectedItem();
+      if (!selected.isValueNull(imagePathPropertyId)) {
+        viewImage(selected.getString(imagePathPropertyId));
+      }
+    }
+    catch (final IOException ex) {
+      throw new RuntimeException(ex);
+    }
   }
 
   private void setupControls() {
